[gd_scene load_steps=3 format=3 uid="uid://6pch2dohecrt"]

[ext_resource type="Texture2D" uid="uid://d3feke23yluai" path="res://assets/Fundo.png" id="1_niwdg"]
[ext_resource type="Script" path="res://scripts/Dia.gd" id="1_w23s0"]

[node name="Dia" type="Node2D"]
script = ExtResource("1_w23s0")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -104.0
offset_right = 504.0
offset_bottom = 600.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_niwdg")
expand_mode = 2
stretch_mode = 5

[node name="GeralLabel" type="RichTextLabel" parent="."]
offset_left = 56.0
offset_top = 16.0
offset_right = 344.0
offset_bottom = 192.0

[node name="PainelMatematica" type="Panel" parent="."]
offset_right = 16.0
offset_bottom = 16.0

[node name="LabelPergunta" type="Label" parent="PainelMatematica"]
layout_mode = 0
offset_left = 56.0
offset_top = 208.0
offset_right = 336.0
offset_bottom = 234.0
text = "Resolva para continuar:"

[node name="BotaoConfirmarResposta" type="Button" parent="PainelMatematica"]
layout_mode = 0
offset_left = 56.0
offset_top = 344.0
offset_right = 344.0
offset_bottom = 400.0
text = "Confirmar"

[node name="InputResposta" type="LineEdit" parent="PainelMatematica"]
layout_mode = 0
offset_left = 56.0
offset_top = 280.0
offset_right = 344.0
offset_bottom = 328.0
placeholder_text = "Digite sua resposta aqui"

[node name="BotaoAvancarParaNoite" type="Button" parent="."]
offset_left = 8.0
offset_top = 536.0
offset_right = 392.0
offset_bottom = 592.0
text = "Avan√ßar para noite"

[node name="PainelAcoes" type="HBoxContainer" parent="."]
offset_left = 16.0
offset_top = 432.0
offset_right = 384.0
offset_bottom = 488.0
alignment = 1

[node name="BotaoReviver" type="Button" parent="PainelAcoes"]
custom_minimum_size = Vector2(120, 40)
layout_mode = 2
text = "Reviver "

[node name="BotaoBeber" type="Button" parent="PainelAcoes"]
custom_minimum_size = Vector2(120, 40)
layout_mode = 2
text = "Beber "

[node name="BotaoNegociar" type="Button" parent="PainelAcoes"]
custom_minimum_size = Vector2(120, 40)
layout_mode = 2
text = "Negociar"

[connection signal="pressed" from="PainelMatematica/BotaoConfirmarResposta" to="." method="_on_botao_confirmar_resposta_pressed"]
[connection signal="pressed" from="BotaoAvancarParaNoite" to="." method="_on_finalizar_turno_pressed"]
[connection signal="pressed" from="PainelAcoes/BotaoReviver" to="." method="_on_botao_reviver_pressed"]
[connection signal="pressed" from="PainelAcoes/BotaoBeber" to="." method="_on_botao_beber_pressed"]
[connection signal="pressed" from="PainelAcoes/BotaoNegociar" to="." method="_on_botao_negociar_pressed"]
